/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2021-05-05 19:00 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * source/gtk/hcwindow.prg
    * ANNOUNCE HB_GTSYS line deleted, because it isn't correct in fact and
      create problems while linking sometimes. HB_GT_TRM() empty function added instead
      for to not be forced to link gttrm.

2021-04-28 09:28 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * include/guilib.ch
    * HwGUI version is changed to 2.23 build 1
  * whatsnew.txt
    * Updated for v2.23 build 1

2021-04-26 21:17 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * include/windows.ch
    ! Small fix

2021-04-26 15:54 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  + contrib/gthwg.hbp
  * contrib/makefile.bc
  * contrib/makefile.gcc
  * contrib/Readme.txt
    * Build files and readme has been updated due to GTHWG.

2021-04-26 14:15 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  + contrib/gthwg
  + contrib/gthwg/gt_hwg.ch
  + contrib/gthwg/gt_hwg.prg
  + contrib/gthwg/gt_hwgui_w.c
  + contrib/gthwg/tests
  + contrib/gthwg/tests/test1.prg
    * gthwg - a new GT library, based on HwGUI, added.
  * contrib/make_b32.bat
  * contrib/makefile.bc
    * Make files for Borland C updated

2021-04-26 10:40 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * utils/tutorial/hwgrun.prg
  * utils/tutorial/tutor.prg
    * New EXTERNAL added
  * utils/tutorial/tutor_eng.xml
    * A "Lenta" module extended.

2021-04-25 09:38 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/gtk/hownbtn.prg
    ! Small fix (ticket #88)

2021-04-23 16:54 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/winapi/hlenta.prg
  * source/gtk/hlenta.prg
    ! propset added, minor fix.

2021-04-23 15:05 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/winapi/hlenta.prg